03-Kubernetes/Lab16+Exposing-Application/manifests/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-nodeport
  namespace: ivolve

spec:
  type: NodePort

  selector:
    app: nodejs-app

  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30080
