03-Kubernetes/Lab16+Exposing-Application/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: app-ingress

spec:
  rules:
    - host: ivolveapp.com
      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: nodejs-service

                port:
                  number: 80
